Mensaje de teselación no hiperbólica
Si se elige una teselación que no sea hiperbólica mandaba un mensaje erróneo, ahora está corregido

--- a/TFG-both.html
+++ b/TFG-both.html
@@ -105,7 +105,7 @@
 			color2 = "Purple"
 
 		if ((p - 2) * (q - 2) <= 4){
-	  	window.alert("Tessellation {" + p + "," + q + "} is not hyperbolic.\n It must satisfy: (p - 2) * (q - 2) >= 4");
+	  	window.alert("Tessellation {" + p + "," + q + "} is not hyperbolic.\n It must satisfy: (p - 2) * (q - 2) > 4");
 			return ;
 		}
 
